#185 #187 Java code generator more or less working. Refactor embedCONTROL for remote/local usage.